src/objects/AMS_OSCAR__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_updated__c</fullName>
        <label>AIMS updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AML_deadline__c</fullName>
        <label>Due diligence deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AML_performed_date__c</fullName>
        <label>Due diligence performed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AML_requested__c</fullName>
        <label>Due diligence requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AML_result__c</fullName>
        <label>Due diligence result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Correction_change_code__c</fullName>
        <inlineHelpText>If selected, once the sanity checks will be set as passed, the selected change code will be generated for each agency involved</inlineHelpText>
        <label>Correction change code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>COR</fullName>
                </value>
                <value>
                    <fullName>LET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Generate_COR_change_code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, once the sanity checks will be set as passed, a COR change code will be generated for each agency involved</inlineHelpText>
        <label>Generate COR change code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Online_Accreditation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional form information</label>
        <referenceTo>AMS_Pax_Accreditation_Form__c</referenceTo>
        <relationshipLabel>OSCARs</relationshipLabel>
        <relationshipName>OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMS_Rejection_Withdrawal_remarks__c</fullName>
        <description>Text field to allow user to add rejection/withdrawal comments</description>
        <label>Rejection / Withdrawal remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Target_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSCARs (AMS Target Agency)</relationshipLabel>
        <relationshipName>OSCARs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ANG_Administrative_non_compliance_date__c</fullName>
        <description>Used on OSCAR Annual Revalidation</description>
        <inlineHelpText>Used on OSCAR Annual Revalidation</inlineHelpText>
        <label>Administrative non-compliance date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ANG_Change_Entity_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field related with the scenario of an accredited agency relocating in a different BSP.</description>
        <label>Change of Entity Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_FA_Opt_out__c</fullName>
        <description>Financial Assessment opt-out flag for Newgen - this means if the Agent opted out from Financial Review.</description>
        <inlineHelpText>Financial Assessment opt-out flag for Newgen - this means if the Agent opted out from Financial Review.</inlineHelpText>
        <label>Financial assessment opt-in / opt-out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_GFA_Change_Assessment__c</fullName>
        <description>GFA Change Assessment</description>
        <label>GFA Change Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Hierarchy_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Multi-country, checkbox to verify if user already defined the hierarchy before the oscar inits</description>
        <inlineHelpText>For Multi-country, checkbox to verify if user already defined the hierarchy before the oscar inits</inlineHelpText>
        <label>Hierarchy Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_PCI_compliance_expiry_date__c</fullName>
        <description>PCI compliance expiry date</description>
        <inlineHelpText>PCI compliance expiry date</inlineHelpText>
        <label>PCI compliance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ANG_Restore_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restore Forms of Payment</description>
        <inlineHelpText>Restore Forms of Payment</inlineHelpText>
        <label>Restore Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Restore_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restore Forms of Payment</description>
        <inlineHelpText>Restore Forms of Payment</inlineHelpText>
        <label>Restore Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Restrict_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict Forms of Payment</description>
        <inlineHelpText>Restrict Forms of Payment</inlineHelpText>
        <label>Restrict Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Restrict_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict Forms of Payment</description>
        <label>Restrict Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Sanity_checks__c</fullName>
        <description>Sanity checks</description>
        <inlineHelpText>Sanity checks</inlineHelpText>
        <label>Sanity checks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Share_documentation_with_vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on IEP Model B Oscar. If checked the documentation is marked as shared with the vendor. Required to pass application receipt step</description>
        <label>Share documentation with vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Type_Of_Change__c</fullName>
        <description>Used for Newgen ISS project</description>
        <label>Type Of Change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ANG_Types_of_Change</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Type_of_change_hidden__c</fullName>
        <description>Used to display the selected types of changes on the left side panel.</description>
        <formula>BR() + 
IF( ISBLANK(ANG_Type_Of_Change__c) , &quot;No types of change selected.&quot;, &quot;&quot; ) +
IF(INCLUDES( ANG_Type_Of_Change__c , &quot;Location&quot;), &quot;Location&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c , &quot;Location type&quot;), &quot;Location type&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Legal name&quot;), &quot;Legal name&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Trade name&quot;), &quot;Trade name&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Legal status&quot;), &quot;Legal status&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Ownership&quot;), &quot;Ownership&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Hierarchy&quot;), &quot;Hierarchy&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Major shareholding&quot;), &quot;Major shareholding&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Minor shareholding&quot;), &quot;Minor shareholding&quot;+BR(), NULL)+
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Accreditation type&quot;), &quot;Accreditation type&quot;+BR(), NULL)+
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Location type to different legal entity&quot;), &quot;Location type to different legal entity&quot;+BR(), NULL)+ 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;VMFR&quot;), &quot;VMFR&quot;+BR(), NULL) + 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Letter Generation&quot;), &quot;Letter Generation&quot;+BR(), NULL) + 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Conversion to GoLite&quot;), &quot;Conversion to GoLite&quot;, NULL) +
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Conversion to Domestic with Cash&quot;), &quot;Conversion to Domestic with Cash&quot;, NULL) + 
IF(INCLUDES( ANG_Type_Of_Change__c, &quot;Conversion to International&quot;), &quot;Conversion to International&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_shared_documentation_with_vendor__c</fullName>
        <description>Populated to current date when the &quot;Share documentation with vendor&quot; flag is set to true</description>
        <label>Shared documentation with vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Reason__c</fullName>
        <formula>Account__r.Reason__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to Account Reason__c</inlineHelpText>
        <label>Account Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSCARs</relationshipLabel>
        <relationshipName>OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_data_rolled_back__c</fullName>
        <label>Account data rolled back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accreditation_Process_Type__c</fullName>
        <label>Accreditation Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Authorization_created__c</fullName>
        <label>Agency Authorization created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on IEP Bank Account Setup</description>
        <label>Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OSCARs</relationshipLabel>
        <relationshipName>OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipLabel>OSCARs</relationshipLabel>
        <relationshipName>OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_deadline__c</fullName>
        <label>Agreement deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_requested__c</fullName>
        <label>Agreement requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_result__c</fullName>
        <description>Date the signed copy of the PSAA is sent to the agent</description>
        <label>Agreement result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anti_Money_Laundering_Complete__c</fullName>
        <label>Due Diligence Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicable_changes__c</fullName>
        <label>Applicable changes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change of location</fullName>
                </value>
                <value>
                    <fullName>Change of name</fullName>
                </value>
                <value>
                    <fullName>Change of legal status</fullName>
                </value>
                <value>
                    <fullName>Change of shareholding</fullName>
                </value>
                <value>
                    <fullName>Change of ownership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Penalty_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Penalty Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_disapproval_date__c</fullName>
        <label>Approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_letter_sent__c</fullName>
        <label>Approval letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Performed_Date__c</fullName>
        <description>Use for SLA calculation, auto populated on status change</description>
        <label>Assessment Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSPLink_participation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BSPLink participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSPLink_updated__c</fullName>
        <label>BSPLink updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_Currency__c</fullName>
        <label>Bank Guarantee Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_amount__c</fullName>
        <label>Bank Guarantee amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_deadline__c</fullName>
        <label>Bank Guarantee deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_received__c</fullName>
        <label>Bank Guarantee received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_requested__c</fullName>
        <label>Bank Guarantee requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_time__c</fullName>
        <formula>IF( AND(NOT(ISNULL(Bank_Guarantee_requested__c)),NOT(ISNULL( Bank_Guarantee_received__c))), 
IF(Bank_Guarantee_received__c - Bank_Guarantee_requested__c =6, TEXT(4), TEXT((Bank_Guarantee_received__c - Bank_Guarantee_requested__c - (2*FLOOR((Bank_Guarantee_received__c - Bank_Guarantee_requested__c)/7)))) ) 
,&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Guarantee time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Document_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <description>Technical field. Used to match custom settings on Change Code generation.</description>
        <formula>IF(Account__r.CNS_Agency__c,
                &apos;CNS-&apos; + TEXT(Account__r.Location_Type__c) + &apos;-&apos;+TEXT(Account__r.Location_Class__c),
                &apos;AMS&apos;
)</formula>
        <label>Business Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_process__c</fullName>
        <formula>Account__r.CNS_Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNS process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Inspection_Req_Disapproval_Date__c</fullName>
        <label>Cancel Inspection Requests</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Inspection_Req_Rejection_Date__c</fullName>
        <label>Cancel Inspection Requests</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Inspection_Requests_Disapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Inspection Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Inspection_Requests_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Inspection Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Generated__c</fullName>
        <label>Certificate Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Code__c</fullName>
        <label>Change Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIS - Application Disapproved</fullName>
                </value>
                <value>
                    <fullName>NEW - New Application</fullName>
                </value>
                <value>
                    <fullName>FIN - Application Finalized</fullName>
                </value>
                <value>
                    <fullName>PCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Effective_as_of_formula__c</fullName>
        <formula>Change_effective_as_of__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Effective as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_effective_as_of__c</fullName>
        <label>Change Effective as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_of_Entity_Location_within_EU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field related to the scenario of an accredited agency relocating in a different BSP, but within European Union</description>
        <label>Change of Entity Location within EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_of_Hierarchy_Scenario__c</fullName>
        <description>Picklist used to identify aditional scenarios for change of hierarchies (for example: ST hierarchy acquired by MC)</description>
        <label>Change of Hierarchy Scenario</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ST_ACQUIRED_BY_MC</fullName>
                    <label>ST Hierarchy Acquired by MC</label>
                </value>
                <value>
                    <fullName>MULTICOUNTRY_SPLIT</fullName>
                    <label>MC Hierarchy splits into two MC hier.</label>
                </value>
                <value>
                    <fullName>MC_LOCATIONS_ACQUIRED_BY_ST</fullName>
                    <label>MC entities being acquired by ST</label>
                </value>
                <value>
                    <fullName>GE_LEFT_ALONE</fullName>
                    <label>GE Account left as a standalone account</label>
                </value>
                <value>
                    <fullName>MC_BSP_SPLIT</fullName>
                    <label>Locations of GoGlobal Hierarchy go to GoStandard on their own</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_of_location_type_behavior__c</fullName>
        <description>This field is only applicable when the OSCAR is opened on an SA Account. It&apos;s used to define the behavior in terms of hierarchy change, that will be applied to the SA Account.</description>
        <label>Change of location type behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Swap with the parent</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t change the parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_OSCAR_Status__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>Used in the multicountry to standard conversion to store the current status of the child oscars creation.</description>
        <label>Child OSCAR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Finished - GE left Alone</fullName>
                </value>
                <value>
                    <fullName>Finished - Just Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_IFAP_Disapproval_Date__c</fullName>
        <label>Close IFAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_IFAP_Disapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close IFAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_IFAP_Rejection_Date__c</fullName>
        <label>Close IFAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_IFAP_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close IFAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_approval__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_validate__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_DD_setup_with_R_S__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm DD setup with R&amp;S</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_DD_setup_with_agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm DD setup with agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_DGR_DGA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm DGR / DGA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Payment_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Payment (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_second_payment_received__c</fullName>
        <description>Used by CNS only</description>
        <inlineHelpText>Used by CNS only</inlineHelpText>
        <label>Confirm second payment received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirm_third_payment_received__c</fullName>
        <description>Used by CNS only</description>
        <inlineHelpText>Used by CNS only</inlineHelpText>
        <label>Confirm third payment received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Sent__c</fullName>
        <label>Confirmation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <formula>Account__r.Country_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Approval_Date__c</fullName>
        <label>Country Specifics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Specifics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Disapproval_Date__c</fullName>
        <label>Country Specifics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Disapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Specifics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Rejection_Date__c</fullName>
        <label>Country Specifics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Specifics_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Specifics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Formula field to display country name at the OSCAR level</description>
        <formula>Account__r.IATA_ISO_Country__r.Name</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Agency_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Agency Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_remarks__c</fullName>
        <label>Criteria Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Section__c</fullName>
        <label>Current Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_setup_with_R_S_confirmed__c</fullName>
        <label>DD setup with R&amp;S confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_setup_with_agent_confirmed__c</fullName>
        <label>DD setup with agent confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DGR_DGA_confirmed__c</fullName>
        <label>DGR / DGA confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DGR_Expired__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Expired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DGR_Expiry_Date__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DGR_First_Name__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
</CustomObject>